--- a/formulario.html
+++ b/formulario.html
@@ -1,33 +1,37 @@
 <!doctype html>
 <html>
 <head>
+    <style>
+        .label{
+            display:block;}
+    </style>
 </head>
 <body>
     <h1>Bienvenido al mundo de los formularios</h1>
     <form method="post" action="https://google.com">
-        <label for="NOMBRE" class="label">NOMBRE</label>
+        <label class="label">NOMBRE</label>
             <input type="text" name"" value""/>
-        <label>APELLIDO</label>
+        <label class="label">APELLIDO</label>
             <input type="text" name"" value""/>
-        <label>EMAIL</label>
+        <label class="label">EMAIL</label>
             <input type="email" name"" value"" placeholder="ejemplo@gmail.com"/>
-        <label>FECHA DE NACIMIENTO</label>
+        <label class="label">FECHA DE NACIMIENTO</label>
             <input type="date"/>
-        <label>donde guardas tu kayak?</label>
+        <label class="label">donde guardas tu kayak?</label>
             <input type="adress"/>
-        <label>Marca del kayak</label>
+        <label class="label">Marca del kayak</label>
             <select>
                 <option>SDK</option>
                 <option>ELADIUS</option>
                 <option>ASIAK</option>
             </select>
-        <label>Tipo de kayak</label>
+        <label class="label">Tipo de kayak</label>
             <input type="radio" name="tipo"value="simple"/>Simple
             <input type="radio" name="tipo"value="doble"/>Doble 
             <input type="radio" name="tipo"value="triple"/> Triple 
-        <label>COMENTARIOS</label>
+        <label class="label">COMENTARIOS</label>
             <textarea cols="30" rows="5" maxlength="15"></textarea>
-        <button type="submit">ENVIAR</button>
+        <button class="label" type="submit">ENVIAR</button>
     </form>
 </body>
 </html>
